--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-319.7KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-293.4KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-3.71MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇫🇷 法国-1.05MB/s(Youtube:不良林), server: 149.202.82.172, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-8.55MB/s(Youtube:不良林), server: az.az-bgp.chuangshi999.xyz, port: 64340, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: az.az-bgp.chuangshi999.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.64MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.19MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-2.35MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-454.7KB/s(Youtube:不良林), server: 165.154.253.49, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇳 中国-584.9KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-497.6KB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-252.3KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇨🇳 中国-279.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-524.0KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -74,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-230.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
