--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-319.7KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-293.4KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-3.71MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.55MB/s(Youtube:不良林), server: 149.202.82.172, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇸🇬 新加坡-454.7KB/s(Youtube:不良林), server: 165.154.253.49, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-193.8KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-584.9KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-497.6KB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-252.3KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇨🇳 中国-279.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
   - {name: 🇨🇳 中国-524.0KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-670.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-387.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-633.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-283.8KB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-319.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-293.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.71MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.55MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-454.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-584.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
       - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
