--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-268.2KB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
-  - {name: 🇨🇳 中国-524.0KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-264.2KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-345.4KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-670.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-387.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1014.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.96MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-268.2KB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
+  - {name: 🇨🇳 中国-345.4KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-633.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-283.8KB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
   - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-212.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.43MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇯🇵 日本-682.0KB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1014.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1014.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1014.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1014.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1014.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1014.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-524.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-670.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1014.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-268.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-633.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-283.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
