--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-237.0KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-212.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-165.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-264.2KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-682.0KB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-195.1KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇫🇷 法国-674.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-357.6KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.75MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.05MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.67MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.89MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.93MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-237.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-237.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-237.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-237.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-237.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-237.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-237.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-212.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-165.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
